--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   "dependencies": {
     "body-parser": "^1.12.4",
     "express": "^4.12.4",
+    "imports-loader": "^0.7.1",
+    "require": "^2.4.20",
     "underscore": "^1.8.3",
     "whatwg-fetch": "^2.0.3"
   }
